--- a/refine_dataset.ipynb
+++ b/refine_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "Name: death_ratio, Length: 2938, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
     "                        'life_expectancy': life_df['Life expectancy '],\n",
     "                        'alcohol': life_df['Alcohol'],\n",
     "                        'hepatitisB': life_df['Hepatitis B'],\n",
-    "                        'measles': life_df['Measles '],\n",
+    "                        'measles': life_df['Measles '] *1000 / life_df['Population'],\n",
     "                        'bmi': life_df[' BMI '],\n",
     "                        'polio': life_df['Polio'],\n",
     "                        'diphtheria': life_df['Diphtheria '],\n",
@@ -140,376 +140,11 @@
     "                        'total_expenditure': life_df['Total expenditure'],\n",
     "                        'thinness_till19': life_df[' thinness  1-19 years'],\n",
     "                        'status': life_df['Status'],\n",
-    "                        'inf_death': life_df['Infant Death'],\n",
+    "                        'inf_death': life_df['infant deaths'],\n",
     "                        'death_ratio': life_df['death_ratio']\n",
     "                        })\n",
     "refined_life_expect = new_df.to_csv(r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Life_Expectancy_Project\\refined_life_expect.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>life_expectancy</th>\n",
-       "      <th>alcohol</th>\n",
-       "      <th>hepatitisB</th>\n",
-       "      <th>measles</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>polio</th>\n",
-       "      <th>diphtheria</th>\n",
-       "      <th>hiv</th>\n",
-       "      <th>total_expenditure</th>\n",
-       "      <th>gdp</th>\n",
-       "      <th>thinness_till19</th>\n",
-       "      <th>status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>82.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>74</td>\n",
-       "      <td>66.6</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56554.38760</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>82.7</td>\n",
-       "      <td>9.71</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>340</td>\n",
-       "      <td>66.1</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.42</td>\n",
-       "      <td>62214.69120</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>82.5</td>\n",
-       "      <td>9.87</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>158</td>\n",
-       "      <td>65.5</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.36</td>\n",
-       "      <td>67792.33860</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>82.3</td>\n",
-       "      <td>10.03</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>199</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.36</td>\n",
-       "      <td>67677.63477</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>10.30</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>190</td>\n",
-       "      <td>64.4</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.20</td>\n",
-       "      <td>62245.12900</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.9</td>\n",
-       "      <td>10.52</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>63.9</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.20</td>\n",
-       "      <td>51874.84800</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.7</td>\n",
-       "      <td>10.62</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>104</td>\n",
-       "      <td>63.4</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>42742.99898</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>10.76</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>65</td>\n",
-       "      <td>62.9</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.78</td>\n",
-       "      <td>49664.68540</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>10.56</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>62.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.53</td>\n",
-       "      <td>4991.98289</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.2</td>\n",
-       "      <td>10.31</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.49</td>\n",
-       "      <td>36118.28381</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>10.30</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>61.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.45</td>\n",
-       "      <td>3416.71483</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.57</td>\n",
-       "      <td>3472.37977</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>9.97</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>91</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.32</td>\n",
-       "      <td>23465.38559</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>9.84</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>59.6</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.39</td>\n",
-       "      <td>281.81763</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>79.9</td>\n",
-       "      <td>9.53</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>141</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.18</td>\n",
-       "      <td>19517.84168</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>79.5</td>\n",
-       "      <td>10.17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>108</td>\n",
-       "      <td>58.2</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>8.80</td>\n",
-       "      <td>2169.92100</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Developed</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       country  life_expectancy  alcohol  hepatitisB  measles   bmi  polio  \\\n",
-       "112  Australia             82.8      NaN        93.0       74  66.6   93.0   \n",
-       "113  Australia             82.7     9.71        91.0      340  66.1   92.0   \n",
-       "114  Australia             82.5     9.87        91.0      158  65.5   91.0   \n",
-       "115  Australia             82.3    10.03        91.0      199  65.0   92.0   \n",
-       "116  Australia             82.0    10.30        92.0      190  64.4   92.0   \n",
-       "117  Australia             81.9    10.52        92.0       70  63.9   92.0   \n",
-       "118  Australia             81.7    10.62        94.0      104  63.4   92.0   \n",
-       "119  Australia             81.3    10.76        94.0       65  62.9   92.0   \n",
-       "120  Australia             81.3    10.56        94.0       11  62.5   92.0   \n",
-       "121  Australia             81.2    10.31        95.0        0  62.0   92.0   \n",
-       "122  Australia             81.0    10.30        95.0       10  61.5   92.0   \n",
-       "123  Australia             86.0     9.84        95.0       70   6.9   92.0   \n",
-       "124  Australia             83.0     9.97        95.0       91   6.3   92.0   \n",
-       "125  Australia             79.9     9.84        95.0       32  59.6   92.0   \n",
-       "126  Australia             79.9     9.53        94.0      141  59.0   91.0   \n",
-       "127  Australia             79.5    10.17         NaN      108  58.2    9.0   \n",
-       "\n",
-       "     diphtheria  hiv  total_expenditure          gdp  thinness_till19  \\\n",
-       "112        93.0  0.1                NaN  56554.38760              0.6   \n",
-       "113        92.0  0.1               9.42  62214.69120              0.6   \n",
-       "114        91.0  0.1               9.36  67792.33860              0.6   \n",
-       "115        92.0  0.1               9.36  67677.63477              0.6   \n",
-       "116        92.0  0.1               9.20  62245.12900              0.6   \n",
-       "117        92.0  0.1               9.20  51874.84800              0.7   \n",
-       "118        92.0  0.1               9.50  42742.99898              0.7   \n",
-       "119        92.0  0.1               8.78  49664.68540              0.7   \n",
-       "120        92.0  0.1               8.53   4991.98289              0.7   \n",
-       "121        92.0  0.1               8.49  36118.28381              0.7   \n",
-       "122        92.0  0.1               8.45   3416.71483              0.7   \n",
-       "123        92.0  0.1               8.57   3472.37977              0.7   \n",
-       "124        93.0  0.1               8.32  23465.38559              0.7   \n",
-       "125        92.0  0.1               8.39    281.81763              0.7   \n",
-       "126        92.0  0.1               8.18  19517.84168              0.7   \n",
-       "127         9.0  0.1               8.80   2169.92100              0.7   \n",
-       "\n",
-       "        status  \n",
-       "112  Developed  \n",
-       "113  Developed  \n",
-       "114  Developed  \n",
-       "115  Developed  \n",
-       "116  Developed  \n",
-       "117  Developed  \n",
-       "118  Developed  \n",
-       "119  Developed  \n",
-       "120  Developed  \n",
-       "121  Developed  \n",
-       "122  Developed  \n",
-       "123  Developed  \n",
-       "124  Developed  \n",
-       "125  Developed  \n",
-       "126  Developed  \n",
-       "127  Developed  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
