--- a/refine_dataset.ipynb
+++ b/refine_dataset.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
     "                        'life_expectancy': life_df['Life expectancy '],\n",
     "                        'alcohol': life_df['Alcohol'],\n",
     "                        'hepatitisB': life_df['Hepatitis B'],\n",
-    "                        'measles': life_df['Measles '] *1000 / life_df['Population'],\n",
+    "                        'measles': life_df['Measles '],\n",
     "                        'bmi': life_df[' BMI '],\n",
     "                        'polio': life_df['Polio'],\n",
     "                        'diphtheria': life_df['Diphtheria '],\n",
@@ -141,6 +141,7 @@
     "                        'thinness_till19': life_df[' thinness  1-19 years'],\n",
     "                        'status': life_df['Status'],\n",
     "                        'inf_death': life_df['infant deaths'],\n",
+    "                        'population': life_df['Population'],\n",
     "                        'death_ratio': life_df['death_ratio']\n",
     "                        })\n",
     "refined_life_expect = new_df.to_csv(r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Life_Expectancy_Project\\refined_life_expect.csv')"
