--- a/refine_dataset.ipynb
+++ b/refine_dataset.ipynb
@@ -47,11 +47,16 @@
     "# create the cut offs to split the population into 3 catagories\n",
     "IQR = [new_df.population.quantile(0.33), new_df.population.quantile(0.67)]\n",
     "\n",
-    "# create new column splitting the population into 3 sizes\n",
+    "# create new feature splitting the population into 3 sizes\n",
     "new_df['pop_size'] = 1\n",
-    "new_df.loc[new_df.population <= IQR[0], 'pop_size'] = int(1)\n",
-    "new_df.loc[(new_df.population < IQR[1]) & (new_df.population > IQR[0]), 'pop_size'] = int(2)\n",
-    "new_df.loc[new_df.population >= IQR[1], 'pop_size'] = int(3)\n",
+    "new_df.loc[new_df.population <= IQR[0], 'pop_size'] = 3\n",
+    "new_df.loc[(new_df.population < IQR[1]) & (new_df.population > IQR[0]), 'pop_size'] = int2\n",
+    "new_df.loc[new_df.population >= IQR[1], 'pop_size'] = 3\n",
+    "\n",
+    "# create new feature for countries with very low bmi\n",
+    "new_df['very_lean'] = 0\n",
+    "lean = new_df.bmi.quantile(0.1)\n",
+    "new_df.loc[new_df.bmi <= lean, 'lean'] = 1\n",
     "\n",
     "# change 0 infant deaths to 1 \n",
     "new_df.loc[new_df.inf_death == 0, 'inf_death'] = 1\n",
