add lean feature

--- a/refine_dataset.ipynb
+++ b/refine_dataset.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "# create new feature splitting the population into 3 sizes\n",
     "new_df['pop_size'] = 1\n",
     "new_df.loc[new_df.population <= IQR[0], 'pop_size'] = 3\n",
-    "new_df.loc[(new_df.population < IQR[1]) & (new_df.population > IQR[0]), 'pop_size'] = int2\n",
+    "new_df.loc[(new_df.population < IQR[1]) & (new_df.population > IQR[0]), 'pop_size'] = 2\n",
     "new_df.loc[new_df.population >= IQR[1], 'pop_size'] = 3\n",
     "\n",
     "# create new feature for countries with very low bmi\n",
