--- a/Life_Expectancy_Notebook.ipynb
+++ b/Life_Expectancy_Notebook.ipynb
@@ -120,7 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plm.create_hist(new_df['school'], title=\"Education in Years\", xlabel=\"Education\") "
+    "plm.create_hist(new_df['gdp'], transform='log', title=\"GDP\", xlabel=\"GDP (log)\")\n",
+    "# plt.savefig('gdp_hist_after.png')"
    ]
   },
   {
@@ -133,6 +134,20 @@
    "source": [
     "# Create a heatmap for all our variables\n",
     "plm.CorrMtx(corr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform our independent variable to look more normally distrubuted\n",
+    "new_df.hiv = new_df['hiv'].apply(np.log)\n",
+    "new_df.pop_gdp = new_df['pop_gdp'].apply(np.log)\n",
+    "new_df.gdp = new_df['gdp'].apply(np.log)\n",
+    "new_df.inf_death =new_df['inf_death'].apply(np.cbrt)\n",
+    "new_df.death_ratio = new_df['death_ratio'].apply(np.sqrt)"
    ]
   },
   {
@@ -158,20 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transform our independent variable to look more normally distrubuted\n",
-    "new_df.hiv = new_df['hiv'].apply(np.log)\n",
-    "new_df.pop_gdp = new_df['pop_gdp'].apply(np.log)\n",
-    "new_df.gdp = new_df['gdp'].apply(np.log)\n",
-    "new_df.inf_death =new_df['inf_death'].apply(np.cbrt)\n",
-    "new_df.death_ratio = new_df['death_ratio'].apply(np.sqrt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# remove outliers and check the amount of data that we left\n",
     "new_df = new_df[new_df.gdp > 1.25] \n",
     "new_df = new_df[new_df.thinness_till19 < 25]\n",
@@ -189,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "# Using seaborn to create scatters and distribution graphs for our possible \n",
+    "# Using seaborn to create scatters and distribution graphs to get a final look at our predictors before modeling \n",
     "colors = ['red','blue','green','black','purple','orange','pink', 'cyan','maroon', 'gray']\n",
     "count = 0 \n",
     "for column in new_df.columns[1:-1]:\n",
@@ -240,14 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'StandardScaler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-420abc4b280b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m                'gdp'] \n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mscaler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindependent\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mscaled_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindependent\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'StandardScaler' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Scaling the data set\n",
     "independent = ['school', 'hiv', 'thinness_till19',\n",
     "               'death_ratio', 'inf_death', 'pop_gdp',\n",
-    "               'gdp', 'pop_size'] \n",
+    "               'gdp'] \n",
     "\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(new_df[independent])\n",
