--- a/Life_Expectancy_Notebook.ipynb
+++ b/Life_Expectancy_Notebook.ipynb
@@ -220,15 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " plm.checkresiduals(new_df, 'life_expectancy', lr_model_init)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#adjusting the model - remove features that were not statistically significant (pop_size)\n",
     "lr_model_inter = ols(formula='life_expectancy~pop_gdp+lifestyle+hiv+thinness_till19+inf_death+school+death_ratio', data=new_df).fit()\n",
     "lr_model_inter.summary()"
@@ -240,6 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# testing residuals\n",
     "plm.checkresiduals(new_df, 'life_expectancy', lr_model_inter)"
    ]
   },
